# generic-llm-lib

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY_REPORT.md  Test Feedback.md  build_tree.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/examples/: cli_chat.py
scripts/: Tutorial_Agents.md  __init__.py  build_tree.py  check_version.py  get_agents_md.py  repo_to_md.py
src/generic_llm_lib/: __init__.py
src/generic_llm_lib/llm_core/: __init__.py  logger.py
src/generic_llm_lib/llm_core/base/: __init__.py  base.py
src/generic_llm_lib/llm_core/documentation/: README.md
src/generic_llm_lib/llm_core/exceptions/: __init__.py  exceptions.py
src/generic_llm_lib/llm_core/messages/: __init__.py  history_handler.py  models.py
src/generic_llm_lib/llm_core/tools/: __init__.py  models.py  registry.py  (+4 more)
src/generic_llm_lib/llm_impl/: __init__.py
src/generic_llm_lib/mcp_wrapper/: __init__.py  wrapper.py
src/generic_llm_lib/scripts/: Tutorial_Agents.md  __init__.py  directory_scanner.py  get_agents_md.py
src/impl/: gemini.py
src/llm_core/: README.md  __init__.py  base.py  logger.py  registry.py  tool_handling_proposal.md  tool_helper.py  tool_loop.py  types.py
src/llm_core/base/: base.py
src/llm_core/documentation/: README.md
src/llm_core/exceptions/: __init__.py  exceptions.py
src/llm_core/messages/: models.py
src/llm_core/tools/: __init__.py  adapter.py  call_protocol.py  models.py  registry.py  schema_validator.py  tool_loop.py
src/llm_impl/: __init__.py  registry.py
src/llm_impl/gemini/: README.md  __init__.py  core.py  models.py  registry.py
src/llm_impl/open_api/: README.md  core.py  models.py  registry.py  tool_helper.py
src/llm_impl/openai_api/: README.md  __init__.py  adapter.py  core.py  models.py  registry.py
src/mcp_wrapper/: __init__.py  wrapper.py
src/scripts/: Tutorial_Agents.md  __init__.py  get_agents_md.py
tests/: conftest.py  test_gemini_core.py  test_gemini_history_auto_update.py  test_gemini_history_handler.py  test_gemini_recording.py  test_llm_retries.py  test_mcp_wrapper.py  test_messages.py  test_openai_core.py  test_openai_recording.py  test_registry.py  test_schema_sanitizer.py  test_schema_validator.py  test_scoped_tool.py  test_security_fixes.py  test_tool_helper.py  test_tool_loop.py  test_tool_manager.py  test_tool_manager_registry_conflicts.py  test_weaknesses.py  test_weaknesses_2.py
tests/cassettes/: test_gemini_ask_method.yaml  test_gemini_chat_method.yaml  test_gemini_chat_roundtrip.yaml  test_gemini_function_calling.yaml  test_gemini_function_calling_with_empty_args.yaml  test_gemini_history_auto_update.yaml  test_gemini_history_handler_integration.yaml  test_gemini_with_history_handler.yaml  test_openai_ask_method.yaml  test_openai_chat_method.yaml  test_openai_chat_method_with_history_handler.yaml  test_openai_chat_roundtrip.yaml  test_openai_function_calling.yaml  test_openai_function_calling_with_history_handler.yaml
(+30 files in other folders)
