[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-llm-lib"
version = "0.2.2"
description = "A flexible, async-first agent library for LLM providers (Google Gemini, etc.) designed for scalable chatbots and server-side applications."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai"
]

[project.urls]
"Homepage" = "https://github.com/NickBelaneDev/generic-llm-lib"